Checking in dbradley@netscape.com's fix for bug 198995. Make sure we default to the default charset if the server gives us one we don't know. r=jst@netscape.com, sr=peterv@netscape.com